<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="10dp"
    tools:context=".activities.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="100"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal">

            <Button
                android:id="@+id/menuButtonAddQuestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/Question_Add"
                android:textSize="20dp" />

            <Button
                android:id="@+id/menuButtonShowQuestions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:layout_weight="1"
                android:text="@string/Show_Question" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal">

            <Button
                android:id="@+id/menuButtonPrepareAnExam"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/Prepare_Exam" />

            <Button
                android:id="@+id/menuButtonExamSettings"
                android:layout_width="match_parent"
                android:textSize="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Customize_Exam" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>