<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:orientation="vertical"
    tools:context=".activities.AddQuestionActivity"
    android:layout_margin="20dip">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        app:srcCompat="@drawable/question1" />

    <EditText
        android:id="@+id/addQuestionQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Question"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/addQuestionOptionA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="A"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/addQuestionOptionB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="B"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/addQuestionOptionC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="C"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/addQuestionOptionD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="D"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/addQuestionOptionE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="E"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Answer" />

        <RadioGroup
            android:id="@+id/addQuestionRadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/addQuestionRadioButtonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="A" />

            <RadioButton
                android:id="@+id/addQuestionRadioButtonB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="B" />

            <RadioButton
                android:id="@+id/addQuestionRadioButtonC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="C" />

            <RadioButton
                android:id="@+id/addQuestionRadioButtonD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="D" />

            <RadioButton
                android:id="@+id/addQuestionRadioButtonE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="E" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addQuestionSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Add" />
    </LinearLayout>

</LinearLayout>